--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,16 @@
     tools:context=".LoginActivity">
 
 
+    <ImageView
+        android:id="@+id/imageLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/covery_logo_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/main_google_button"
@@ -38,26 +48,15 @@
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
-
-    <ImageView
-        android:id="@+id/imageLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/covery_logo_2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/main_kakao_button" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/main_kakao_button"
         android:layout_width="137dp"
         android:layout_height="22dp"
         android:layout_marginTop="30dp"
         android:background="@color/ic_launcher_background"
-        android:text="카카오로 시작하기"
+        android:text="@string/action_sign_in_kakao"
         android:textSize="18sp"
         app:backgroundTint="@color/transparency"
         app:layout_constraintEnd_toEndOf="parent"
