--- a/app/src/main/res/menu/board_menu_bottom.xml
+++ b/app/src/main/res/menu/board_menu_bottom.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_home"
-        android:title="홈"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_home"
+        android:title="홈"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_playlist"
-        android:title="플레이리스트"/>
+        android:enabled="true"
+        android:icon="@drawable/border"
+        android:title="플레이리스트"
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/menu_more"
-        android:title="더보기"/>
+        android:enabled="true"
+        android:icon="@drawable/ic_settings"
+        android:title="더보기"
+        app:showAsAction="ifRoom"/>
 
 </menu>
