--- a/app/src/main/res/layout/fragment_board_playlist.xml
+++ b/app/src/main/res/layout/fragment_board_playlist.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="플레이리스트"
+        android:text="@string/covery"
         android:textColor="@android:color/black"
         android:textSize="50sp"/>
 
