--- a/app/src/main/res/layout/fragment_board_playlist.xml
+++ b/app/src/main/res/layout/fragment_board_playlist.xml
@@ -232,4 +232,15 @@
         app:layout_constraintTop_toTopOf="@id/player_view"
         app:tint="@color/black" />
 
+    <ImageView
+        android:id="@+id/play_list_favorite"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="340dp"
+        android:src="@drawable/ic_baseline_favorite_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/player_view"
+        app:tint="@color/black" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
