--- a/app/src/main/res/drawable-v24/player_seek_background.xml
+++ b/app/src/main/res/drawable-v24/player_seek_background.xml
@@ -3,7 +3,7 @@
     <item android:id="@android:id/background"> <!-- 재정의 -->
         <shape>
             <corners android:radius="2dp" />
-            <solid android:color="@color/seek_background" />
+            <solid android:color="@color/transparency" />
         </shape>
     </item>
 
