--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main">#F36464</color>
     <color name="transparency">#00ff0000</color>
+    <color name="gray">#ffaaaaaa</color>
 </resources>
