--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/main_kakao_button"
@@ -28,17 +32,8 @@
         android:layout_height="wrap_content"
         android:rotationX="0"
         android:src="@drawable/kakao_login_medium_wide"
+        android:contentDescription="@string/action_sign_in_kakao"
         android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/main_pass_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:background="@color/transparency"
-        android:text="@string/action_pass"
-        android:textColor="#FFFFFF"
-        android:textSize="19sp"
-        android:visibility="gone"/>
 
 </LinearLayout>
