--- a/app/src/main/res/layout/fragment_board_home.xml
+++ b/app/src/main/res/layout/fragment_board_home.xml
@@ -38,6 +38,7 @@
         android:textSize="25sp" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/Newest_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
