--- a/app/src/main/res/layout/fragment_board_playlist.xml
+++ b/app/src/main/res/layout/fragment_board_playlist.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginBottom="0dp"
     tools:context=".fragment.BoardPlaylist">
 
     <androidx.constraintlayout.widget.ConstraintLayout
