--- a/app/src/main/res/layout/fragment_board_home.xml
+++ b/app/src/main/res/layout/fragment_board_home.xml
@@ -23,7 +23,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="#DDDADA" />
 
     <TextView
@@ -37,12 +37,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Newest_list"
         android:layout_width="match_parent"
-        android:layout_height="500dp" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        app:layout_constrainedHeight="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,9 +50,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/player_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:background="#FFFFFF"
+            android:layout_height="match_parent"
+            android:background="#EEEEEE"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +60,7 @@
             <SeekBar
                 android:id="@+id/play_list_seek_bar"
                 android:layout_width="0dp"
-                android:layout_height="2dp"
-                android:clickable="false"
+                android:layout_height="6dp"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:progressTint="@color/purple_200"
