--- a/app/src/main/res/layout/fragment_board_playlist.xml
+++ b/app/src/main/res/layout/fragment_board_playlist.xml
@@ -9,6 +9,11 @@
     android:layout_marginBottom="0dp"
     tools:context=".fragment.BoardPlaylist">
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:src="@drawable/covery_logo_2"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -20,6 +25,7 @@
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -98,6 +104,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/ic_playlist"
+
+            android:layout_marginBottom="60dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/backwardMusic_btn"
             app:layout_constraintTop_toBottomOf="@+id/mediaPos_sb"
@@ -109,6 +117,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/ic_baseline_skip_previous_48"
+            android:layout_marginBottom="60dp"
             app:layout_constraintStart_toEndOf="@id/playlist_btn"
             app:layout_constraintEnd_toStartOf="@+id/playToggle_btn"
             app:layout_constraintTop_toBottomOf="@+id/mediaPos_sb"
@@ -119,6 +128,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/ic_baseline_play_arrow_24"
+            android:layout_marginBottom="60dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mediaPos_sb"
@@ -129,6 +139,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/ic_baseline_skip_next_48"
+            android:layout_marginBottom="60dp"
             app:layout_constraintStart_toEndOf="@+id/playToggle_btn"
             app:layout_constraintEnd_toStartOf="@id/favorite_btn"
             app:layout_constraintTop_toBottomOf="@+id/mediaPos_sb"
@@ -139,6 +150,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="@drawable/ic_baseline_favorite_24"
+            android:layout_marginBottom="60dp"
             app:layout_constraintStart_toEndOf="@id/forward_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/mediaPos_sb"
