--- a/app/src/main/res/layout/fragment_board_more.xml
+++ b/app/src/main/res/layout/fragment_board_more.xml
@@ -54,6 +54,7 @@
                 android:orientation="vertical"
                 android:gravity="start|center">
                 <TextView
+                    android:id="@+id/user_id"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
